# GlimmerCCCC

./: .gitmodules  CMakeLists.txt
backend/: CMakeLists.txt
backend/cuda/: CMakeLists.txt
benchmark/: Application.cpp  CMakeLists.txt
cccc/: Brain.cpp  CMakeLists.txt  Net.h
examples/: CMakeLists.txt  DataPreparerMnist.cpp  MnistReader.h
pycccc/: CMakeLists.txt
pycccc/src/: pybind11_bind.h  pycccc.cpp
work/: mnist-cv.ini
